Fixed word-wrapping issue on preview/view/edit webpages

--- a/edit/editorFrame.css
+++ b/edit/editorFrame.css
@@ -9,6 +9,7 @@ body {
     width: 40em;
     background-color: #FFFFFF;
     float: left;
+    word-wrap: break-word; 
 }
 
 #documentContainer {
