--- a/upload/preview/preview.css
+++ b/upload/preview/preview.css
@@ -8,6 +8,7 @@ body {
     width: 40rem;
     background-color: #FFFFFF;
     float: left;
+    word-wrap: break-word;
 }
 
 .hidden { 
